--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "A library for managing multiple audio chatrooms, as well as spatialized sound management among participants.",
   "main": "dist/audiospace.js",
   "scripts": {
-    "build": "grunt build"
+    "build": "grunt build",
+    "test": "jest"
   },
   "repository": {
     "type": "git",
@@ -32,7 +33,10 @@
     "grunt-cli": "^1.3.2",
     "grunt-contrib-watch": "^1.1.0",
     "http-server": "^0.12.3",
-    "matchdep": "^2.0.0"
+    "matchdep": "^2.0.0",
+    "jest": "^26.1.0",
+    "jest-puppeteer": "^4.4.0",
+    "puppeteer": "^2.1.1"
   },
   "homepage": "https://github.com/jywarren/audiospace"
 }
