--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -1,9 +1,9 @@
+image:
+  file: .gitpod.Dockerfile
+
 tasks:
   - init: npm install
     command: node_modules/http-server/bin/http-server
 ports:
   - port: 8080
     onOpen: open-preview
-
-tasks:
-  - command: chromium-browser --no-sandbox
