--- a/.travis.yml
+++ b/.travis.yml
@@ -4,3 +4,5 @@ node_js:
   - '12'
 pre_script: npm run build
 script: npm run test
+before_install: 
+  - google-chrome-stable --headless --no-sandbox --remote-debugging-port=9222 http://localhost &
